# cubegame

./: .clang-format  .gitignore  Cargo.toml  LICENSE.txt  README.md  compile_flags.txt  makefile
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: stb_image.c
res/font/: bigblueterminal.json
res/shader/: 3d.fs  3d.vs  chunk.fs  chunk.vs  chunk.wgsl  chunk_wireframe.fs  chunk_wireframe.vs  postprocess.wgsl  text.fs  text.vs
src/: array.c  array.h  atlas.c  atlas.h  block.c  block.h  block.rs  camera.c  camera.h  chunk.c  chunk.h  chunk.rs  common.h  debug_utils.h  features.rs  font.rs  game.c  game.h  game.rs  input.rs  lib.c  lib.h  main.c  main.rs  mesh.c  mesh.h  mesh.rs  resource.rs  shader.c  shader.h  string.c  string.h  text.c  text.h  text.rs  texture.c  texture.h  utils.rs  window.c  window.h  (+4 more)
src/chunk/: client.rs  mod.rs
src/game/: app.rs  debug_toggles.rs  fps_counter.rs  mod.rs  resource.rs
src/wgpu_utils/: binding.rs  buffer.rs  mod.rs
src/worldgen/: feature.rs  mod.rs
