[package]
name = "new_cubegame"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
glium = "*"
cgmath = "0.18"
index_vec = "*"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version="*", features = ["full"] }
rand = "0.9"
rand_xoshiro = "0.7"
