[package]
name = "cubegame"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
glium = "*"
cgmath = "0.18"
index_vec = "*"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "*", features = ["full"] }
rand = "0.9"
rand_xoshiro = "0.7"
num_cpus = "1"
clap = { version = "4.5.47", features = ["derive"] }
getrandom = "0.3.3"
noise = "0.9.0"
